<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/fragment_main_page"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.constraint.Guideline
        android:id="@+id/fragment_main_page_gl_y3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.3" />

    <android.support.constraint.Guideline
        android:id="@+id/fragment_main_page_gl_y4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.4" />

    <android.support.constraint.Guideline
        android:id="@+id/fragment_main_page_gl_y5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />

    <android.support.constraint.Guideline
        android:id="@+id/fragment_main_page_gl_y7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.7" />

    <android.support.constraint.Guideline
        android:id="@+id/fragment_main_page_gl_y8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.8" />

    <android.support.constraint.Guideline
        android:id="@+id/fragment_main_page_gl_x15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.15" />

    <android.support.constraint.Guideline
        android:id="@+id/fragment_main_page_gl_x45"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.45" />

    <android.support.constraint.Guideline
        android:id="@+id/fragment_main_page_gl_x55"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.55" />

    <android.support.constraint.Guideline
        android:id="@+id/fragment_main_page_gl_x85"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.85" />

    <ImageView
        android:id="@+id/fragment_main_page_iv_logo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@id/fragment_main_page_gl_y3"
        app:layout_constraintLeft_toLeftOf="@id/fragment_main_page_gl_x15"
        app:layout_constraintRight_toRightOf="@id/fragment_main_page_gl_x85"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/fragment_main_page_et_first_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/name"
        android:inputType="text"
        android:textSize="@dimen/textSize2"
        app:layout_constraintBottom_toBottomOf="@id/fragment_main_page_gl_y3"
        app:layout_constraintLeft_toLeftOf="@id/fragment_main_page_gl_x15"
        app:layout_constraintRight_toRightOf="@id/fragment_main_page_gl_x85"
        app:layout_constraintTop_toTopOf="@id/fragment_main_page_gl_y3" />

    <EditText
        android:id="@+id/fragment_main_page_et_last_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/lastName"
        android:inputType="text"
        android:textSize="@dimen/textSize2"
        app:layout_constraintBottom_toBottomOf="@id/fragment_main_page_gl_y4"
        app:layout_constraintLeft_toLeftOf="@id/fragment_main_page_gl_x15"
        app:layout_constraintRight_toRightOf="@id/fragment_main_page_gl_x85"
        app:layout_constraintTop_toTopOf="@id/fragment_main_page_gl_y4" />

    <EditText
        android:id="@+id/fragment_main_page_et_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:inputType="text"
        android:textSize="@dimen/textSize2"
        app:layout_constraintBottom_toBottomOf="@id/fragment_main_page_gl_y5"
        app:layout_constraintLeft_toLeftOf="@id/fragment_main_page_gl_x15"
        app:layout_constraintRight_toRightOf="@id/fragment_main_page_gl_x85"
        app:layout_constraintTop_toTopOf="@id/fragment_main_page_gl_y5" />

    <Button
        android:id="@+id/fragment_main_page_btn_enter"
        style="@style/Base.Widget.AppCompat.Button.Colored"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/enter"
        android:textSize="@dimen/textSize2"
        app:layout_constraintBottom_toBottomOf="@id/fragment_main_page_gl_y8"
        app:layout_constraintLeft_toLeftOf="@id/fragment_main_page_gl_x15"
        app:layout_constraintRight_toRightOf="@id/fragment_main_page_gl_x45"
        app:layout_constraintTop_toTopOf="@id/fragment_main_page_gl_y7" />

    <Button
        android:id="@+id/fragment_main_page_btn_cancle"
        style="@style/Base.Widget.AppCompat.Button.Colored"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/cancle"
        android:textSize="@dimen/textSize2"
        app:layout_constraintBottom_toBottomOf="@id/fragment_main_page_gl_y8"
        app:layout_constraintLeft_toLeftOf="@id/fragment_main_page_gl_x55"
        app:layout_constraintRight_toRightOf="@id/fragment_main_page_gl_x85"
        app:layout_constraintTop_toTopOf="@id/fragment_main_page_gl_y7" />

</android.support.constraint.ConstraintLayout>